--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@commitlint/config-angular": "^5.1.1",
     "babel-loader": "^8.0.0-beta.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-polyfill": "^6.26.0",
     "css-loader": "^0.28.7",
     "dotenv-webpack": "^1.5.4",
     "file-loader": "^1.1.6",
@@ -37,9 +38,13 @@
     "webpack-dev-server": "^2.9.7"
   },
   "dependencies": {
+    "@ausgaben/models": "^1.1.0",
+    "@rheactorjs/errors": "^1.0.2",
+    "@rheactorjs/models": "^2.0.3",
     "amazon-cognito-identity-js": "^1.28.0",
     "bootstrap": "^4.0.0-beta.2",
     "classnames": "^2.2.5",
+    "crypto-js": "^3.1.9-1",
     "history": "^4.7.2",
     "material-design-icons": "^3.0.1",
     "prop-types": "^15.6.0",
