--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "webpack --watch",
     "build": "webpack",
     "start": "webpack-dev-server --open",
-    "lint:fix": "prettier --write --single-quote src/**/*.{js,jsx,json,css} src/*.{js,jsx,json,css,scss}",
+    "lint:fix": "prettier --write --single-quote src/**/*.{js,jsx,json,css} src/*.{js,jsx,json,css}",
     "commitmsg": "commitlint -e"
   },
   "author": "",
@@ -18,12 +18,12 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.35",
     "@babel/preset-env": "^7.0.0-beta.35",
     "@babel/preset-react": "^7.0.0-beta.35",
-    "@commitlint/cli": "^5.2.5",
+    "@commitlint/cli": "^5.2.8",
     "@commitlint/config-angular": "^5.1.1",
     "babel-loader": "^8.0.0-beta.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-polyfill": "^6.26.0",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.8",
     "dotenv-webpack": "^1.5.4",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
@@ -35,16 +35,16 @@
     "style-loader": "^0.19.1",
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7"
+    "webpack-dev-server": "^2.10.0"
   },
   "dependencies": {
-    "@ausgaben/models": "^1.1.0",
+    "@ausgaben/models": "^2.0.2",
     "@rheactorjs/errors": "^1.0.2",
-    "@rheactorjs/models": "^2.0.3",
-    "amazon-cognito-identity-js": "^1.28.0",
-    "bootstrap": "^4.0.0-beta.2",
+    "@rheactorjs/models": "^3.0.0",
+    "amazon-cognito-identity-js": "^1.29.0",
+    "bootstrap": "^4.0.0-beta.3",
     "classnames": "^2.2.5",
-    "crypto-js": "^3.1.9-1",
+    "crypto-js": "^3.1.8",
     "history": "^4.7.2",
     "material-design-icons": "^3.0.1",
     "prop-types": "^15.6.0",
