--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@rheactorjs/errors": "^1.0.2",
     "@rheactorjs/models": "^3.0.0",
     "amazon-cognito-identity-js": "^1.31.0",
-    "bootstrap": "^4.0.0-beta.3",
+    "bootstrap": "^4.0.0",
     "classnames": "^2.2.5",
     "crypto-js": "^3.1.8",
     "history": "^4.7.2",
