--- a/package.json
+++ b/package.json
@@ -18,27 +18,28 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.35",
     "@babel/preset-env": "^7.0.0-beta.35",
     "@babel/preset-react": "^7.0.0-beta.35",
-    "@commitlint/cli": "^6.1.2",
-    "@commitlint/config-angular": "^6.1.2",
+    "@commitlint/cli": "^6.1.3",
+    "@commitlint/config-angular": "^6.1.3",
     "babel-loader": "^8.0.0-beta.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-polyfill": "^6.26.0",
-    "css-loader": "^0.28.10",
-    "dotenv-webpack": "^1.5.4",
-    "file-loader": "^1.1.9",
-    "html-webpack-plugin": "^2.30.1",
+    "css-loader": "^0.28.11",
+    "dotenv-webpack": "^1.5.5",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.0.6",
     "husky": "^0.14.3",
     "node-sass": "^4.7.2",
-    "prettier": "^1.10.2",
+    "prettier": "^1.11.1",
     "redux-devtools": "^3.4.1",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.20.2",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1"
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.12",
+    "webpack-dev-server": "^3.1.1"
   },
   "dependencies": {
-    "@ausgaben/models": "^2.1.0",
+    "@ausgaben/models": "^2.1.1",
     "@rheactorjs/errors": "^1.0.2",
     "@rheactorjs/models": "^3.0.1",
     "amazon-cognito-identity-js": "^2.0.1",
@@ -47,7 +48,7 @@
     "crypto-js": "^3.1.8",
     "history": "^4.7.2",
     "material-design-icons": "^3.0.1",
-    "prop-types": "^15.6.0",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
