--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "watch": "webpack --watch",
     "build": "webpack",
     "start": "webpack-dev-server --open",
@@ -28,6 +28,7 @@
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.0.6",
     "husky": "^0.14.3",
+    "jest": "^22.4.2",
     "node-sass": "^4.7.2",
     "prettier": "^1.11.1",
     "redux-devtools": "^3.4.1",
