--- a/package.json
+++ b/package.json
@@ -23,35 +23,36 @@
     "babel-loader": "^8.0.0-beta.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-polyfill": "^6.26.0",
-    "css-loader": "^0.28.11",
+    "css-loader": "^1.0.0",
     "dotenv-webpack": "^1.5.7",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
-    "jest": "^23.2.0",
-    "node-sass": "^4.9.0",
-    "prettier": "^1.13.7",
+    "jest": "^23.5.0",
+    "node-sass": "^4.9.3",
+    "prettier": "^1.14.2",
     "redux-devtools": "^3.4.1",
-    "sass-loader": "^7.0.3",
-    "style-loader": "^0.21.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.22.1",
     "url-loader": "^1.0.1",
-    "webpack": "^4.14.0",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4"
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
   },
   "dependencies": {
-    "@ausgaben/models": "^3.0.0",
+    "@ausgaben/models": "^3.0.1",
     "@rheactorjs/errors": "^1.0.2",
     "@rheactorjs/models": "^4.0.1",
-    "amazon-cognito-identity-js": "^2.0.13",
-    "bootstrap": "^4.1.1",
+    "amazon-cognito-identity-js": "^2.0.20",
+    "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
     "crypto-js": "^3.1.8",
     "history": "^4.7.2",
+    "luxon": "^1.3.3",
     "material-design-icons": "^3.0.1",
     "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
