fix: update dependencies

--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.35",
     "@babel/preset-env": "^7.0.0-beta.35",
     "@babel/preset-react": "^7.0.0-beta.35",
-    "@commitlint/cli": "^7.0.0",
-    "@commitlint/config-angular": "^7.0.1",
-    "babel-loader": "^8.0.0-beta.0",
+    "@commitlint/cli": "^7.1.1",
+    "@commitlint/config-angular": "^7.1.1",
+    "babel-loader": "^8.0.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-polyfill": "^6.26.0",
     "css-loader": "^1.0.0",
     "dotenv-webpack": "^1.5.7",
-    "file-loader": "^1.1.11",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
     "jest": "^23.5.0",
@@ -33,17 +33,17 @@
     "prettier": "^1.14.2",
     "redux-devtools": "^3.4.1",
     "sass-loader": "^7.1.0",
-    "style-loader": "^0.22.1",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.16.5",
+    "style-loader": "^0.23.0",
+    "url-loader": "^1.1.1",
+    "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5"
+    "webpack-dev-server": "^3.1.7"
   },
   "dependencies": {
-    "@ausgaben/models": "^3.0.1",
+    "@ausgaben/models": "^3.0.2",
     "@rheactorjs/errors": "^1.0.2",
     "@rheactorjs/models": "^4.0.1",
-    "amazon-cognito-identity-js": "^2.0.20",
+    "amazon-cognito-identity-js": "^2.0.23",
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
     "crypto-js": "^3.1.8",
