--- a/package.json
+++ b/package.json
@@ -8,55 +8,59 @@
     "watch": "webpack --watch",
     "build": "webpack",
     "start": "webpack-dev-server --open",
-    "lint:fix": "prettier --write --single-quote src/**/*.{js,jsx,json,css} src/*.{js,jsx,json,css}",
-    "commitmsg": "commitlint -e"
+    "lint:fix": "prettier --write --single-quote src/**/*.{js,jsx,json,css} src/*.{js,jsx,json,css}"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.41",
+    "@babel/core": "^7.1.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.35",
-    "@babel/preset-env": "^7.0.0-beta.35",
+    "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0-beta.35",
-    "@commitlint/cli": "^7.1.2",
+    "@commitlint/cli": "^7.2.1",
     "@commitlint/config-angular": "^7.1.2",
-    "babel-loader": "^8.0.2",
+    "babel-loader": "^8.0.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-polyfill": "^6.26.0",
-    "css-loader": "^1.0.0",
+    "css-loader": "^1.0.1",
     "dotenv-webpack": "^1.5.7",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "husky": "^0.14.3",
-    "jest": "^23.5.0",
-    "node-sass": "^4.9.3",
-    "prettier": "^1.14.2",
-    "redux-devtools": "^3.4.1",
+    "husky": "^1.2.0",
+    "jest": "^23.6.0",
+    "node-sass": "^4.10.0",
+    "prettier": "^1.15.2",
+    "redux-devtools": "^3.4.2",
     "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.0",
-    "url-loader": "^1.1.1",
-    "webpack": "^4.17.2",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.8"
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.26.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
     "@ausgaben/models": "^3.0.2",
     "@rheactorjs/errors": "^1.0.2",
     "@rheactorjs/models": "^4.0.1",
-    "amazon-cognito-identity-js": "^2.0.23",
+    "amazon-cognito-identity-js": "^3.0.3",
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
     "crypto-js": "^3.1.8",
     "history": "^4.7.2",
-    "luxon": "^1.3.3",
+    "luxon": "^1.8.0",
     "material-design-icons": "^3.0.1",
     "prop-types": "^15.6.2",
-    "react": "^16.5.0",
-    "react-dom": "^16.5.0",
-    "react-redux": "^5.0.7",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
-    "redux": "^4.0.0"
+    "redux": "^4.0.1"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -e"
+    }
   }
 }
