--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "graphql-tag": "^2.10.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
+    "luxon": "^1.12.0",
     "node-sass": "^4.11.0",
     "prettier": "^1.16.4",
     "react": "^16.8.4",
@@ -68,6 +69,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/luxon": "^1.11.1",
     "@types/reactstrap": "^7.1.3"
   }
 }
