--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "aws-amplify-react": "^2.3.3-beta.5",
     "aws-appsync": "^1.7.2",
     "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
     "husky": "^1.3.1",
@@ -69,6 +70,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/classnames": "^2.2.7",
     "@types/luxon": "^1.11.1",
     "@types/reactstrap": "^7.1.3"
   }
