--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@material-ui/icons": "^3.0.2",
     "@types/jest": "^24.0.11",
     "@types/node": "^11.13.0",
-    "@types/react": "^16.8.10",
+    "@types/react": "^16.8.12",
     "@types/react-dom": "^16.8.3",
     "@types/react-router-dom": "^4.3.1",
     "apollo-cache-inmemory": "^1.5.1",
@@ -27,8 +27,8 @@
     "apollo-link": "^1.2.11",
     "apollo-link-error": "^1.1.10",
     "apollo-link-http": "^1.5.14",
-    "aws-amplify": "^1.1.23",
-    "aws-amplify-react": "^2.3.3-beta.5",
+    "aws-amplify": "^1.1.24",
+    "aws-amplify-react": "^2.3.4",
     "aws-appsync": "^1.7.2",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
@@ -36,16 +36,16 @@
     "graphql-tag": "^2.10.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
-    "luxon": "^1.12.0",
+    "luxon": "^1.12.1",
     "node-sass": "^4.11.0",
     "prettier": "^1.16.4",
     "react": "^16.8.6",
-    "react-apollo": "^2.5.3",
+    "react-apollo": "^2.5.4",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
-    "reactstrap": "^7.1.0",
-    "typescript": "^3.4.1"
+    "reactstrap": "^8.0.0",
+    "typescript": "^3.4.2"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
