--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "@commitlint/config-angular": "^7.5.0",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
-    "@types/jest": "^24.0.11",
-    "@types/node": "^11.13.4",
-    "@types/react": "^16.8.13",
+    "@types/jest": "^24.0.12",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.8.16",
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.2",
     "apollo-cache-inmemory": "^1.5.1",
@@ -34,18 +34,18 @@
     "classnames": "^2.2.6",
     "graphql": "^14.2.1",
     "graphql-tag": "^2.10.1",
-    "husky": "^1.3.1",
-    "lint-staged": "^8.1.5",
-    "luxon": "^1.12.1",
-    "node-sass": "^4.11.0",
+    "husky": "^2.2.0",
+    "lint-staged": "^8.1.6",
+    "luxon": "^1.13.0",
+    "node-sass": "^4.12.0",
     "prettier": "^1.17.0",
     "react": "^16.8.6",
-    "react-apollo": "^2.5.4",
+    "react-apollo": "^2.5.5",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8",
+    "react-scripts": "^3.0.0",
     "reactstrap": "^8.0.0",
-    "typescript": "^3.4.3"
+    "typescript": "^3.4.5"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
@@ -72,6 +72,6 @@
   "devDependencies": {
     "@types/classnames": "^2.2.7",
     "@types/luxon": "^1.12.0",
-    "@types/reactstrap": "^8.0.0"
+    "@types/reactstrap": "^8.0.1"
   }
 }
