--- a/package.json
+++ b/package.json
@@ -12,15 +12,8 @@
   "author": "Markus Tacker <m@coderbyheart.com>",
   "license": "MIT",
   "dependencies": {
-    "@commitlint/cli": "^7.6.1",
-    "@commitlint/config-angular": "^7.6.0",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
-    "@types/jest": "^24.0.13",
-    "@types/node": "^12.0.2",
-    "@types/react": "^16.8.17",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-router-dom": "^4.3.3",
     "apollo-cache-inmemory": "^1.5.1",
     "apollo-cache-persist": "^0.1.1",
     "apollo-client": "^2.5.1",
@@ -34,17 +27,30 @@
     "classnames": "^2.2.6",
     "graphql": "^14.3.0",
     "graphql-tag": "^2.10.1",
-    "husky": "^2.3.0",
-    "lint-staged": "^8.1.7",
-    "luxon": "^1.13.2",
-    "node-sass": "^4.12.0",
-    "prettier": "^1.17.1",
+    "luxon": "^1.14.0",
     "react": "^16.8.6",
     "react-apollo": "^2.5.5",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
+    "reactstrap": "^8.0.0"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^7.6.1",
+    "@commitlint/config-angular": "^7.6.0",
+    "@types/classnames": "^2.2.7",
+    "@types/graphql": "^14.2.0",
+    "@types/jest": "^24.0.13",
+    "@types/luxon": "^1.13.0",
+    "@types/node": "^12.0.2",
+    "@types/react": "^16.8.17",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-router-dom": "^4.3.3",
+    "@types/reactstrap": "^8.0.1",
+    "husky": "^2.3.0",
+    "lint-staged": "^8.1.7",
+    "node-sass": "^4.12.0",
+    "prettier": "^1.17.1",
     "react-scripts": "^3.0.1",
-    "reactstrap": "^8.0.0",
     "typescript": "^3.4.5"
   },
   "lint-staged": {
@@ -68,10 +74,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "devDependencies": {
-    "@types/classnames": "^2.2.7",
-    "@types/luxon": "^1.13.0",
-    "@types/reactstrap": "^8.0.1"
-  }
+  ]
 }
