--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-apollo": "^3.1.1",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
-    "reactstrap": "^8.0.1"
+    "reactstrap": "^8.0.1",
+    "styled-components": "^4.4.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.2.0",
@@ -46,9 +47,9 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^4.3.5",
     "@types/reactstrap": "^8.0.4",
+    "@types/styled-components": "^4.1.19",
     "husky": "^3.0.5",
     "lint-staged": "^9.3.0",
-    "node-sass": "^4.12.0",
     "prettier": "^1.18.2",
     "react-scripts": "^3.1.2",
     "typescript": "^3.6.3"
