--- a/package.json
+++ b/package.json
@@ -12,48 +12,50 @@
   "author": "Markus Tacker <m@coderbyheart.com>",
   "license": "MIT",
   "dependencies": {
-    "@material-ui/core": "^4.4.3",
-    "@material-ui/icons": "^4.4.3",
-    "@sentry/browser": "^5.6.3",
+    "@material-ui/core": "^4.7.1",
+    "@material-ui/icons": "^4.5.1",
+    "@sentry/browser": "^5.9.1",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-cache-persist": "^0.1.1",
     "apollo-client": "^2.6.4",
     "apollo-link": "^1.2.13",
     "apollo-link-error": "^1.1.12",
     "apollo-link-http": "^1.5.16",
-    "aws-amplify": "^1.1.40",
-    "aws-amplify-react": "^2.4.4",
-    "aws-appsync": "^2.0.0",
-    "bootstrap": "^4.3.1",
+    "aws-amplify": "^1.2.4",
+    "aws-amplify-react": "^2.5.4",
+    "aws-appsync": "^3.0.2",
+    "aws-appsync-auth-link": "^2.0.1",
+    "aws-appsync-subscription-link": "^2.0.1",
+    "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
-    "luxon": "^1.19.3",
-    "react": "^16.9.0",
-    "react-apollo": "^3.1.1",
-    "react-dom": "^16.9.0",
-    "react-router-dom": "^5.1.0",
-    "reactstrap": "^8.0.1",
-    "styled-components": "^4.4.0"
+    "luxon": "^1.21.3",
+    "react": "^16.12.0",
+    "react-apollo": "^3.1.3",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "reactstrap": "^8.1.1",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-angular": "^8.2.0",
     "@types/classnames": "^2.2.9",
     "@types/graphql": "^14.5.0",
-    "@types/jest": "^24.0.18",
-    "@types/luxon": "^1.15.2",
-    "@types/node": "^12.7.8",
-    "@types/react": "^16.9.3",
-    "@types/react-dom": "^16.9.1",
-    "@types/react-router-dom": "^5.1.0",
-    "@types/reactstrap": "^8.0.4",
-    "@types/styled-components": "^4.1.19",
-    "husky": "^3.0.5",
-    "lint-staged": "^9.4.0",
-    "prettier": "^1.18.2",
-    "react-scripts": "^3.1.2",
-    "typescript": "^3.6.3"
+    "@types/jest": "^24.0.23",
+    "@types/luxon": "^1.21.0",
+    "@types/node": "^12.12.14",
+    "@types/react": "^16.9.13",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/reactstrap": "^8.0.6",
+    "@types/styled-components": "^4.4.0",
+    "husky": "^3.1.0",
+    "lint-staged": "^9.5.0",
+    "prettier": "^1.19.1",
+    "react-scripts": "^3.2.0",
+    "typescript": "^3.7.2"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
