--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "author": "Markus Tacker <m@coderbyheart.com>",
   "license": "MIT",
+  "repository": {
+    "url": "https://github.com/ausgaben/web"
+  },
   "dependencies": {
     "@material-ui/core": "^4.7.2",
     "@material-ui/icons": "^4.5.1",
