--- a/package.json
+++ b/package.json
@@ -41,17 +41,16 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "reactstrap": "^8.4.1",
-    "styled-components": "^5.1.0",
-    "snyk": "^1.316.1"
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-angular": "^8.3.4",
+    "@commitlint/cli": "^9.1.1",
+    "@commitlint/config-angular": "^9.1.1",
     "@types/classnames": "^2.2.10",
     "@types/graphql": "^14.5.0",
-    "@types/jest": "^25.2.1",
+    "@types/jest": "^26.0.7",
     "@types/luxon": "^1.22.0",
-    "@types/node": "^13.13.4",
+    "@types/node": "^14.0.27",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@types/react-router-dom": "^5.1.5",
@@ -61,7 +60,7 @@
     "lint-staged": "^10.1.7",
     "prettier": "^2.0.5",
     "react-scripts": "^3.4.1",
-    "tslib": "^1.11.1",
+    "snyk": "^1.316.1",
     "typescript": "^3.8.3"
   },
   "lint-staged": {
