--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@material-ui/core": "^4.9.12",
     "@material-ui/icons": "^4.9.1",
-    "@sentry/browser": "^5.15.5",
+    "@sentry/browser": "5.23.0",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-cache-persist": "^0.1.1",
     "apollo-client": "^2.6.8",
@@ -31,37 +31,37 @@
     "aws-appsync": "^3.0.4",
     "aws-appsync-auth-link": "^2.0.2",
     "aws-appsync-subscription-link": "^1.0.1",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "4.5.2",
     "classnames": "^2.2.6",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
-    "luxon": "^1.23.0",
+    "luxon": "1.25.0",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "reactstrap": "^8.4.1",
-    "styled-components": "^5.1.0"
+    "styled-components": "5.2.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^9.1.1",
-    "@commitlint/config-angular": "^9.1.1",
+    "@commitlint/cli": "9.1.2",
+    "@commitlint/config-angular": "9.1.2",
     "@types/classnames": "^2.2.10",
     "@types/graphql": "^14.5.0",
-    "@types/jest": "^26.0.8",
-    "@types/luxon": "^1.22.0",
-    "@types/node": "^14.0.27",
-    "@types/react": "^16.9.34",
+    "@types/jest": "26.0.13",
+    "@types/luxon": "1.24.4",
+    "@types/node": "14.6.4",
+    "@types/react": "16.9.49",
     "@types/react-dom": "^16.9.6",
     "@types/react-router-dom": "^5.1.5",
-    "@types/reactstrap": "^8.4.2",
-    "@types/styled-components": "^5.1.0",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.1.7",
-    "prettier": "^2.0.5",
-    "react-scripts": "^3.4.1",
-    "snyk": "^1.369.2",
-    "typescript": "^3.8.3"
+    "@types/reactstrap": "8.5.1",
+    "@types/styled-components": "5.1.3",
+    "husky": "4.3.0",
+    "lint-staged": "10.3.0",
+    "prettier": "2.1.1",
+    "react-scripts": "3.4.3",
+    "snyk": "1.393.0",
+    "typescript": "4.0.2"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
@@ -70,7 +70,7 @@
   },
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -e",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "pre-commit": "lint-staged"
     }
   },
