--- a/package.json
+++ b/package.json
@@ -17,51 +17,51 @@
     "url": "https://github.com/ausgaben/web"
   },
   "dependencies": {
-    "@material-ui/core": "^4.9.12",
-    "@material-ui/icons": "^4.9.1",
-    "@sentry/browser": "5.24.2",
+    "@material-ui/core": "4.11.2",
+    "@material-ui/icons": "4.11.2",
+    "@sentry/browser": "5.29.2",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-cache-persist": "^0.1.1",
     "apollo-client": "^2.6.8",
     "apollo-link": "^1.2.14",
     "apollo-link-error": "^1.1.13",
     "apollo-link-http": "^1.5.17",
-    "aws-amplify": "^3.0.9",
-    "aws-amplify-react": "^4.1.8",
+    "aws-amplify": "3.3.13",
+    "aws-amplify-react": "4.2.17",
     "aws-appsync": "^3.0.4",
     "aws-appsync-auth-link": "^2.0.2",
     "aws-appsync-subscription-link": "^1.0.1",
     "bootstrap": "4.5.3",
     "classnames": "^2.2.6",
-    "graphql": "^15.0.0",
+    "graphql": "15.4.0",
     "graphql-tag": "^2.10.3",
     "luxon": "1.25.0",
-    "react": "^16.13.1",
+    "react": "17.0.1",
     "react-apollo": "^3.1.5",
-    "react-dom": "^16.13.1",
+    "react-dom": "17.0.1",
     "react-router-dom": "^5.1.2",
-    "reactstrap": "^8.6.0",
-    "styled-components": "5.2.0"
+    "reactstrap": "8.8.0",
+    "styled-components": "5.2.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "9.1.2",
-    "@commitlint/config-angular": "9.1.2",
-    "@types/classnames": "^2.2.10",
+    "@commitlint/cli": "11.0.0",
+    "@commitlint/config-angular": "11.0.0",
+    "@types/classnames": "2.2.11",
     "@types/graphql": "^14.5.0",
-    "@types/jest": "26.0.13",
-    "@types/luxon": "1.24.4",
-    "@types/node": "14.6.4",
-    "@types/react": "16.9.49",
-    "@types/react-dom": "^16.9.6",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/reactstrap": "8.5.1",
-    "@types/styled-components": "5.1.3",
-    "husky": "4.3.0",
-    "lint-staged": "10.3.0",
-    "prettier": "2.1.1",
-    "react-scripts": "3.4.3",
-    "snyk": "1.393.0",
-    "typescript": "4.0.2"
+    "@types/jest": "26.0.19",
+    "@types/luxon": "1.25.0",
+    "@types/node": "14.14.16",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
+    "@types/react-router-dom": "5.1.6",
+    "@types/reactstrap": "8.7.2",
+    "@types/styled-components": "5.1.7",
+    "husky": "4.3.6",
+    "lint-staged": "10.5.3",
+    "prettier": "2.2.1",
+    "react-scripts": "4.0.1",
+    "snyk": "1.437.3",
+    "typescript": "4.1.3"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
