--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier": "prettier --single-quote --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
-    "snyk-protect": "snyk protect",
-    "prepare": "npm run snyk-protect"
+    "prepare": "husky install"
   },
   "author": "Markus Tacker <m@coderbyheart.com>",
   "license": "MIT",
@@ -17,62 +16,47 @@
     "url": "https://github.com/ausgaben/web"
   },
   "dependencies": {
-    "@material-ui/core": "4.11.2",
+    "@apollo/client": "3.3.13",
+    "@material-ui/core": "4.11.3",
     "@material-ui/icons": "4.11.2",
-    "@sentry/browser": "5.29.2",
-    "apollo-cache-inmemory": "^1.6.5",
-    "apollo-cache-persist": "^0.1.1",
-    "apollo-client": "^2.6.8",
-    "apollo-link": "^1.2.14",
-    "apollo-link-error": "^1.1.13",
-    "apollo-link-http": "^1.5.17",
-    "aws-amplify": "3.3.13",
-    "aws-amplify-react": "4.2.17",
-    "aws-appsync": "^3.0.4",
-    "aws-appsync-auth-link": "^2.0.3",
-    "aws-appsync-subscription-link": "^1.0.1",
-    "bootstrap": "4.5.3",
-    "classnames": "^2.2.6",
-    "graphql": "15.4.0",
-    "graphql-tag": "^2.10.3",
-    "luxon": "1.25.0",
-    "react": "17.0.1",
-    "react-apollo": "^3.1.5",
-    "react-dom": "17.0.1",
-    "react-router-dom": "^5.1.2",
-    "reactstrap": "8.8.1",
-    "styled-components": "5.2.1"
+    "@sentry/browser": "6.2.5",
+    "apollo3-cache-persist": "0.9.1",
+    "aws-amplify": "3.3.26",
+    "aws-amplify-react": "4.2.30",
+    "aws-appsync-auth-link": "3.0.4",
+    "aws-appsync-subscription-link": "3.0.6",
+    "bootstrap": "4.6.0",
+    "classnames": "2.3.1",
+    "graphql": "15.5.0",
+    "graphql-tag": "2.11.0",
+    "luxon": "1.26.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-router-dom": "5.2.0",
+    "reactstrap": "8.9.0",
+    "styled-components": "5.2.3"
   },
   "devDependencies": {
-    "@commitlint/cli": "11.0.0",
-    "@commitlint/config-angular": "11.0.0",
+    "@commitlint/cli": "12.1.1",
+    "@commitlint/config-angular": "12.1.1",
     "@types/classnames": "2.2.11",
-    "@types/graphql": "^14.5.0",
-    "@types/jest": "26.0.19",
-    "@types/luxon": "1.25.0",
-    "@types/node": "14.14.19",
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
+    "@types/jest": "26.0.22",
+    "@types/luxon": "1.26.2",
+    "@types/node": "14.14.37",
+    "@types/react": "17.0.3",
+    "@types/react-dom": "17.0.3",
     "@types/react-router-dom": "5.1.7",
-    "@types/reactstrap": "8.7.2",
-    "@types/styled-components": "5.1.7",
-    "husky": "4.3.6",
-    "lint-staged": "10.5.3",
+    "@types/styled-components": "5.1.9",
+    "husky": "^6.0.0",
+    "lint-staged": "10.5.4",
     "prettier": "2.2.1",
-    "react-scripts": "4.0.1",
-    "snyk": "1.437.3",
-    "typescript": "4.1.3"
+    "react-scripts": "4.0.3",
+    "typescript": "4.2.3"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
       "prettier --write"
     ]
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "lint-staged"
-    }
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -83,6 +67,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "snyk": true
+  ]
 }
