--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -19,7 +19,6 @@ jobs:
         with:
           path: ~/.npm
           key: ${{ runner.OS }}-build-${{ hashFiles('**/package-lock.json') }}
-      - name: Install dependencies
-        run: npm ci --no-audit
-      - name: Build
-        run: npm run build
+      - run: Install dependencies
+      - run: npm exec -- jest
+      - run: npm run build
