--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -19,6 +19,6 @@ jobs:
         with:
           path: ~/.npm
           key: ${{ runner.OS }}-build-${{ hashFiles('**/package-lock.json') }}
-      - run: Install dependencies
+      - run: npm ci --no-audit
       - run: npm exec -- jest
       - run: npm run build
